New version beta  + Moved to Minecraft 1.21  + Moved to ac core 1.5.11-beta1